--- a/src/MA/MainBundle/Resources/views/Main/indexMain.html.twig
+++ b/src/MA/MainBundle/Resources/views/Main/indexMain.html.twig
@@ -163,17 +163,17 @@
 
 			<!-- Accueil -->
 			<div class="section section_home" id="accueil">
-				<div class="row" id="buttonToDiapo">
-					<button class="btn btn-diapo" onClick="goToDiapo()">
-						<img src="{{ asset('img/system/defaults/right_arrow_white.png') }}" alt="" class="btn_arrow"/>
-						 DIAPORAMA 
-						<img src="{{ asset('img/system/defaults/left_arrow_white.png') }}" alt="" class="btn_arrow"/>
-					</button>
-				</div>
 
 				<div class="uppercase hidden-xs" id="menu_top">
 					<div id="div_logo_welcome">
 						<img src="{{ asset('img/system/logo/logo.png') }}" alt="Logo" id="logo_welcome"/>
+					</div>
+					<div class="" id="buttonToDiapo">
+						<button class="btn btn-diapo" onClick="goToDiapo()">
+							<img src="{{ asset('img/system/defaults/right_arrow_white.png') }}" alt="" class="btn_arrow"/>
+							 DIAPORAMA 
+							<img src="{{ asset('img/system/defaults/left_arrow_white.png') }}" alt="" class="btn_arrow"/>
+						</button>
 					</div>
 					<div class="dropdown">
 					    <a class="dropdown-toggle no_style_a" data-toggle="dropdown" href="#" role="button" aria-expanded="false">
