--- a/app/Resources/views/includes/header.html.twig
+++ b/app/Resources/views/includes/header.html.twig
@@ -14,6 +14,12 @@
 		      L'association <span class="caret"></span>
 		    </a>
 		    <ul class="dropdown-menu" role="menu">
+		    	<li>
+	          		<a href="{{ path('ma_main_homepage') }}#assoc"  id="btn_section1">
+	          			Qui sommes-nous ?
+	          		</a>
+	          	</li>
+	          	<hr/>
 	          	<li>
 	          		<a href="{{ path('ma_main_homepage') }}#assoc">
 	          			La charte
@@ -21,8 +27,8 @@
 	          	</li>
 	          	<hr/>
 	          	<li>
-	          		<a href="{{ path('ma_main_homepage') }}#assoc" id="btn_section1">
-	          			Petite histoire
+	          		<a href="{{ path('ma_main_homepage') }}#assoc">
+	          			Quelques repères
 	          		</a>
 	          	</li>
 		    </ul>
@@ -52,12 +58,17 @@
 		    </ul>
 		</li>
 		<li  class="border_right_li" id="btn_header5">
-			<a href="{{ path('ma_main_homepage') }}#actu" id="btn_section5">
-				L'actualité
+			<a href="{{ path('ma_main_homepage') }}#nosBesoins" id="btn_section5">
+				Nos besoins
 			</a>
 		</li>
 		<li  class="border_right_li" id="btn_header6">
-			<a href="{{ path('ma_main_homepage') }}#footer" id="btn_section6">
+			<a href="{{ path('ma_main_homepage') }}#actu" id="btn_section6">
+				L'actualité
+			</a>
+		</li>
+		<li  class="border_right_li" id="btn_header7">
+			<a href="{{ path('ma_main_homepage') }}#footer" id="btn_section7">
 				Contact
 			</a>
 		</li>
