--- a/app/Resources/views/includes/social.html.twig
+++ b/app/Resources/views/includes/social.html.twig
@@ -5,13 +5,13 @@ or (route == 'ma_main_homepage_elementAjax')
 or (route == 'ma_main_helpUs') %}
 <div id="social_media" class="hidden-xs">
 
-    <a href="https://www.facebook.com/" target="_blank">
+    <a href="https://www.facebook.com/missionandina" target="_blank">
       <div class="social social_fb"></div>
     </a>
     <a href="https://twitter.com/" target="_blank" rel="external">
       <div class="social social_tw"></div>
     </a>
-    <a href="#">
+    <a href="{{ path('ma_main_homepage') }}#footer">
       <div class="social social_mail"></div>
     </a>
 
