--- a/src/MA/MainBundle/Resources/views/Main/helpUs.html.twig
+++ b/src/MA/MainBundle/Resources/views/Main/helpUs.html.twig
@@ -28,6 +28,32 @@
 					<div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
 					    <div class="thumbnail">
 					      <div class="caption">
+					        <h3>
+					        	Répartitions des dons
+					        </h3>
+					        	<div class="row">
+						        	<div class="progress">
+									  <div class="progress-bar progress-bar-success progress-bar-striped active" style="width: 95%">
+									  </div>
+									  <div class="progress-bar progress-bar progress-bar-striped active" style="width: 5%">
+									  </div>
+									</div>
+					        	</div>
+					        	<div class="row">
+					        		<div class="col-lg-7 col-md-7 col-sm-7 col-xs-7 left">
+					        			<strong>95%</strong> pour les bénéficiaires, écoliers, étudiants et jeunes pro et leurs projets divers et variés
+					        		</div>
+					        		<div class="col-lg-5 col-md-5 col-sm-5 col-xs-5 right border_black_left">
+					        			<strong>5%</strong> pour le bon fonctionnement de l'association
+					        		</div>
+					        	</div>
+					      </div>
+					    </div>
+
+					    <br/>
+
+					    <div class="thumbnail">
+					      <div class="caption">
 					        <h3>Contributions</h3>
 								Les fonds que Mission Andina reverse sont récoltés de diverses manières :
 					        	<ul>
@@ -78,7 +104,7 @@
 								Les entités suivantes sont partenaires avec Mission Andina et leurs bénéfices sont en partie reversés à l'association:
 								<div class="row">
 									<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 photo_partner_container">
-										<a href="www.lama-demoiselle.com" class="no_style_a">
+										<a href="http://www.lama-demoiselle.com" class="no_style_a" target="_blank">
 											<div class="row photo_partner_content">
 												<div class="row80">
 													<div class="photo_partner" style="width: 100%; min-height:100px; background-image: url('{{ asset( 'img/system/partners/lama-demoiselle.png') }}'); background-size: cover; background-position: 50%;" alt="Lama Demoiselle">
@@ -164,7 +190,7 @@
 					    	<hr class="medium_hr"/>
 					    	<div class="row">
 					    		<div class="col-lg-2 col-md-2 col-sm-2 col-xs-2">
-									<div class="photo_helpUs" style="width: 100%; min-height:100px; background-image: url('{{ asset( 'img/system/helpUs/lama.png') }}'); background-size: cover; background-position: 50%;" alt="Artisanat">
+									<div class="photo_helpUs" style="width: 100%; min-height:100px; background-image: url('{{ asset( 'img/system/helpUs/lama.png') }}'); background-size: cover; background-position: 50%;" alt="Artisanat" onClick="showPhotoCarousel('{{ asset('img/system/helpUs/lama.png') }}')">
 				                    </div>
 					    		</div>
 					    		<div class="col-lg-7 col-md-7 col-sm-7 col-xs-7">
@@ -221,7 +247,7 @@
 					    	<hr class="medium_hr"/>
 					    	<div class="row">
 					    		<div class="col-lg-2 col-md-2 col-sm-2 col-xs-2">
-									<div class="photo_helpUs" style="width: 100%; min-height:100px; background-image: url('{{ asset( 'img/system/helpUs/turbulette.png') }}'); background-size: cover; background-position: 50%;" alt="Turbulette">
+									<div class="photo_helpUs" style="width: 100%; min-height:100px; background-image: url('{{ asset( 'img/system/helpUs/turbulette.png') }}'); background-size: cover; background-position: 50%;" alt="Turbulette" onClick="showPhotoCarousel('{{ asset('img/system/helpUs/turbulette.png') }}')">
 				                    </div>
 					    		</div>
 					    		<div class="col-lg-7 col-md-7 col-sm-7 col-xs-7">
@@ -277,7 +303,7 @@
 					    	<hr class="medium_hr"/>
 					    	<div class="row">
 					    		<div class="col-lg-2 col-md-2 col-sm-2 col-xs-2">
-									<div class="photo_helpUs" style="width: 100%; min-height:100px; background-image: url('{{ asset( 'img/system/helpUs/cd.png') }}'); background-size: cover; background-position: 50%;" alt="cd">
+									<div class="photo_helpUs" style="width: 100%; min-height:100px; background-image: url('{{ asset( 'img/system/helpUs/cd.png') }}'); background-size: cover; background-position: 50%;" alt="cd" onClick="showPhotoCarousel('{{ asset('img/system/helpUs/cd.png') }}')">
 				                    </div>
 					    		</div>
 					    		<div class="col-lg-7 col-md-7 col-sm-7 col-xs-7">
