--- a/src/MA/UserBundle/Resources/views/User/articles.html.twig
+++ b/src/MA/UserBundle/Resources/views/User/articles.html.twig
@@ -168,6 +168,16 @@
 							window.location = path;
 						}
 					}
+					function areYouSureDeletePerson(path) {
+						if (confirm('Êtes-vous sûr de vouloir supprimer ce bénéficiaire ?')) {
+							window.location = path;
+						}
+					}
+					function areYouSureDeleteProject(path) {
+						if (confirm('Êtes-vous sûr de vouloir supprimer ce projet ?')) {
+							window.location = path;
+						}
+					}
               	</script>
 
 			</div>
